--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     justify-content: center;
     align-items: center;
     margin: 0;
-    background: #424f6f;
+    background: black;
 }
 
 #container {
@@ -14,7 +14,7 @@ body {
     height: 400px;
     padding: 0;
     box-sizing: border-box;
-    background: #424f6f;
+    background: greenyellow;
 }
 
 *:after,
@@ -34,7 +34,7 @@ body {
     margin: 50px auto 0;
     width: 180px;
     height: 220px;
-    background: #f2fbf1;
+    background: purple;
     border-top-left-radius: 90px;
     border-top-right-radius: 90px;
 }
@@ -48,7 +48,7 @@ body {
     width: 36px;
     height: 36px;
     border-radius: 50%;
-    background: #f2fbf1;
+    background: aquamarine;
     animation: floaty .2s infinite;
 }
 
@@ -75,12 +75,12 @@ body {
     display: block;
     width: 30px;
     height: 30px;
-    background: #252c49;
+    background: maroon;
     border-radius: 50%;
 }
 
 #spooky #body #mouth {
-    background: #252c49;
+    background: mintcream;
     margin: 25px auto 0;
     width: 60px;
     height: 30px;
@@ -91,7 +91,7 @@ body {
 #spooky #body #mouth:before {
     content: ' ';
     display: block;
-    background: #fff;
+    background: yellow;
     margin-left: 20px;
     width: 10px;
     height: 10px;
@@ -111,7 +111,7 @@ body {
     content: ' ';
     width: 36px;
     height: 36px;
-    background: #f2fbf1;
+    background: brown;
     border-radius: 50%;
 }
 
